--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,6 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous">
-
 </head>
 <body>
 
@@ -29,19 +28,17 @@
     </div>
 </nav>
 
-<br>
-<br>
-<div class = "container">
-    <div class = "row">
-        <div class = "col-md-6 col-md-offset-3">
+<br><br>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
 
             <h1> User Login Page </h1>
-            <form th:action="@{/login}" method="post">
+            <form id="login-form" th:action="@{/login}" method="post">
 
                 <!-- error message -->
                 <div th:if="${param.error}">
-                    <div class="alert alert-danger">Invalid username or
-                        password.</div>
+                    <div class="alert alert-danger">Invalid username or password.</div>
                 </div>
 
                 <!-- logout message -->
@@ -49,9 +46,9 @@
                     <div class="alert alert-info">You have been logged out.</div>
                 </div>
 
-                <div class = "form-group">
-                    <label for ="username"> Username </label> :
-                    <input type="text" class = "form-control" id ="username" name = "username"
+                <div class="form-group">
+                    <label for="username"> Username </label> :
+                    <input type="text" class="form-control" id="username" name="username"
                            placeholder="Enter Email ID" autofocus="autofocus">
                 </div>
 
@@ -71,11 +68,44 @@
                 </div>
             </form>
             <div class="form-group">
-						<span>New user? <a href="/" th:href="@{/registration}">Register
-								here</a></span>
+                <span>New user? <a href="/" th:href="@{/registration}">Register here</a></span>
             </div>
         </div>
     </div>
 </div>
+
+<script>
+    // Attach submit event listener to the login form
+    document.getElementById("login-form").addEventListener("submit", function(event){
+        // Prevent immediate form submission for demo purposes
+        event.preventDefault();
+
+        // Trigger toast notification using SweetAlert2
+        const Toast = Swal.mixin({
+            toast: true,
+            position: "top-end",
+            showConfirmButton: false,
+            timer: 3000,
+            timerProgressBar: true,
+            didOpen: (toast) => {
+                toast.onmouseenter = Swal.stopTimer;
+                toast.onmouseleave = Swal.resumeTimer;
+            }
+        });
+
+        // Show the success toast message
+        Toast.fire({
+            icon: "success",
+            title: "Signed in successfully"
+        });
+
+        // Submit the form after a small delay to allow the toast to appear
+        setTimeout(() => {
+            document.getElementById("login-form").submit();
+        }, 1000);  // 1 seconds delay
+    });
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
